# ishowtts

./: .gitignore  Cargo.toml  GITHUB_SETUP.md  OPTIMIZATION_SUMMARY.md  QUICK_START_GITHUB.md  README.md  prompt.md
.agent/: CURRENT_MAINTENANCE_STATUS.md  CURRENT_SESSION_2025_09_30.md  CURRENT_STATUS_2025_09_30.md  CURRENT_STATUS_2025_09_30_LATEST.md  FINAL_OPTIMIZATION_REPORT.md  KNOWN_ISSUES.md  LONG_TERM_ROADMAP.md  MAINTENANCE_CHECKLIST.md  MAINTENANCE_GUIDE.md  MAINTENANCE_PLAN_2025_09_30.md  MAINTENANCE_PLAN_2025_09_30_LATEST.md  MAINTENANCE_SESSION_2025_09_30.md  MAINTENANCE_SESSION_2025_09_30_EVENING.md  MAINTENANCE_SUMMARY_2025_09_30.md  NEXT_OPTIMIZATION_IDEAS.md  NEXT_SESSION_2025_09_30.md  ONGOING_OPTIMIZATION_PLAN.md  OPTIMIZATION_2025_09_30_NFE7.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_NEXT_STEPS.md  OPTIMIZATION_PLAN_2025_09_30.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_ROADMAP_NEXT.md  OPTIMIZATION_SESSION_2025_09_30_EVENING.md  OPTIMIZATION_SUMMARY_2025_09_30_FINAL.md  PERFORMANCE_ANALYSIS_2025_09_30.md  PERFORMANCE_LOG_2025_09_30.md  PHASE2_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_PRODUCTION.md  QUICK_STATUS_2025_09_30.md  QUICK_SUMMARY_2025_09_30.md  README.md  README_CURRENT.md  README_OPTIMIZATIONS.md  SESSION_2025_09_30.md  SESSION_2025_09_30_AFTERNOON.md  SESSION_2025_09_30_CURRENT.md  SESSION_2025_09_30_FINAL.md  (+25 more)
.agent/backups/: api.py.optimized  utils_infer.py.optimized
.agent/quality_samples/nfe6_vs_nfe7_20250930_124505/: EVALUATION_TEMPLATE.txt
config/: danmaku.toml  danmaku_gateway.toml  ishowtts.example.toml
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  danmaku.rs  main.rs  routes.rs  shimmy_integration.rs  synth.rs  voice_overrides.rs
crates/danmaku/: Cargo.toml
crates/danmaku-gateway/: Cargo.toml
crates/danmaku-gateway/src/: config.rs  filter.rs  lib.rs  queue.rs  tts.rs
crates/danmaku-service/: Cargo.toml
crates/danmaku-service/src/: main.rs
crates/danmaku/src/: config.rs  lib.rs  message.rs  twitch.rs  youtube.rs
crates/frontend-web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/frontend-web/src/: lib.rs  main.rs
crates/tts-engine/: Cargo.toml
crates/tts-engine/src/: engine_kind.rs  lib.rs
models/: vocoder_layer_info.json  vocoder_profile.json
scripts/: bench_short_prompt.py  benchmark_tts.sh  benchmark_tts_performance.py  benchmark_vocoder.py  bootstrap_python_env.sh  build_all.sh  convert_vocoder_tensorrt.sh  detect_regression.py  export_vocoder_onnx.py  extended_performance_test.py  generate_quality_samples.py  monitor_performance.py  monitor_performance.sh  profile_bottlenecks.py  profile_next_optimization.py  quick_performance_test.py  quick_profile.py  quick_status.sh  run_backend.sh  run_test_suite.sh  run_vllm_server.sh  setup_github.sh  setup_performance_mode.sh  ssh_clash_proxy_toggle.sh  start_all.sh  test_e2e_tensorrt.py  test_fp16_optimization.py  test_max_autotune.py  test_nfe6_quality.py  test_nfe_performance.py  test_nfe_variants.py  test_optimizations.py  test_tensorrt_simple.py  validate_nfe7.py  warmup_model.py
tests/: README.md  test_integration.py  test_tts_core.py
