[package]
name = "ishowtts-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
parking_lot = "0.12"
rand = "0.8"
tempfile = "3"

danmaku = { path = "../danmaku" }
danmaku-gateway = { path = "../danmaku-gateway" }

shimmy = { path = "../../third_party/shimmy", default-features = false }
tts-engine = { path = "../tts-engine" }
