[package]
name = "danmaku-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
danmaku = { path = "../danmaku" }
futures = { workspace = true }
regex = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
toml = "0.8"
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
serde_json = { workspace = true }
