[package]
name = "danmaku-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
danmaku = { path = "../danmaku" }
danmaku-gateway = { path = "../danmaku-gateway" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12"
rand = "0.8"
tower = { workspace = true, features = ["util"] }
thiserror = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true }
uuid = { workspace = true }
