[package]
name = "frontend-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.5", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
web-sys = { version = "0.3.80", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "WebSocket",
    "MessageEvent",
    "Event",
    "HtmlAudioElement",
    "CloseEvent",
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Navigator",
    "Clipboard"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
